[DOCKER] Create & Configure Dockerfile and DockerCompose files for testing purposes locally with different services.